# short-video-reverse

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  reading-list.md
docs/: BGM-反解-spec.html  BGM-反解-spec.md  BGM-反解-技术选型.md  BGM-反解-术语与流水线.md  视频结构化拆解-概念知识地图.html  高质量视频结构化拆解-方案调研.md
outputs/arc/: Lotus_MY26_Combined-15s_16x9_CLEAN_Audio-250207_v016_Grounding.json  Lotus_MY26_Combined-15s_16x9_CLEAN_Audio-250207_v016_QA.json  Lotus_MY26_Combined-15s_16x9_CLEAN_Audio-250207_v016_Segment.json  Lotus_MY26_Combined-15s_16x9_CLEAN_Audio-250207_v016_Summary.json  douyin_ai_19s_Grounding.json  douyin_ai_19s_QA.json  douyin_ai_19s_Segment.json  douyin_ai_19s_Summary.json  douyin_drama_16s_Grounding.json  douyin_drama_16s_QA.json  douyin_drama_16s_Segment.json  douyin_drama_16s_Summary.json  douyin_hair_17s_Grounding.json  douyin_hair_17s_QA.json  douyin_hair_17s_Segment.json  douyin_hair_17s_Summary.json  douyin_kid_10s_Grounding.json  douyin_kid_10s_QA.json  (+2 more)
papers/: references.bib
scripts/: bgm_build_index.py  bgm_common.py  bgm_dsp.py  bgm_extract.py  bgm_retrieval_smoke.py  bgm_separate.py  compose_common.py  compose_eval.py  compose_extract.py  compose_smoke.py  compose_valid_fonts.txt  compose_validate.py  font_build_index.py  font_common.py  font_embed.py  font_eval_gallery.py  font_extract.py  font_match.py  font_match_smoke.py  font_ocr.py  font_preflight.py  font_rerank_eval.py  font_style.py  font_synth.py  fx_common.py  fx_describe.py  fx_detect.py  fx_extract.py  narr_common.py  narr_extract.py  setup-arc-hunyuan-gpu.sh  test_arc_api.py
(+42 files in other folders)
